add first dashboard for open PRs

--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,3 +2,13 @@
 @primaryLight2: lighten(@primary, 40%);
 @primaryDark1: darken(@primary, 20%);
 @primaryDark2: darken(@primary, 40%);
+
+html, body {
+  font-family: Roboto;
+}
+
+.v-center {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
