code reviews card

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,10 +1,12 @@
 @primary: #cb2d3e;
+@textMain: black;
 
 @navbarLinkColor: white;
 @navbarLinkColorHover: @navbarLinkColor;
 
 @navBarIconSize: 50px;
 
+@fontSizeBigger: 14px;
 @fontSize: 12px;
 @fontSizeSmaller: 11px;
 @fontSizeSmallest: 10px;
